# mscqrg

./: .gitignore  README.md  pyproject.toml  requirements.txt
mscqrg/: DataType_v20224.xml  bulk_data.py  cli.py  load_datatypes.py  main.py
