# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mscqrg"
version = "0.0.1"
description = "MSC Nastran Documentation Parser"
readme = "README.md"
authors = [{ name = "Marcus Bakke", email = "marcusabakke@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "PyMuPDF >= 1.21.1",
    "tabulate >= 0.9.0",
]

[project.urls]
Homepage = "https://github.com/dmarc3/mscqrg"

[project.scripts]
qrg = "mscqrg.cli:command_line_interface"